--- a/frontend/src/app/views/book-page/book-page.component.css
+++ b/frontend/src/app/views/book-page/book-page.component.css
@@ -40,3 +40,49 @@ ul {
   color: #2d4483;
   word-break: break-all;
 }
+
+.star-rating-book {
+  position: relative;
+  display:inline-block;
+  background-image: url('src/assets/svg/star_0-book.svg');
+  background-position: 0 0;
+  background-repeat: repeat-x;
+  cursor: pointer;
+  width: 80px;
+  height: 16px;
+  background-size: 16px;
+}
+
+.star-rating-book .star-value-book {
+  position: absolute;
+  height: 100%;
+  background: url('src/assets/svg/star_1-book.svg') repeat-x;
+  background-size: 16px;
+}
+
+.review-cards{
+  padding: 0;
+  margin: 5px 5px;
+}
+
+a[aria-expanded=true] #three-dots {
+  display: none;
+}
+a[aria-expanded=false] #arrows-up {
+  display: none;
+}
+
+.review-comment {
+  max-width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.dataTable-selector {
+  font-size: 1rem;
+  height: 31px;
+  padding-top: 2px;
+}
+
+
