--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -129,9 +129,7 @@
             <table style="width: 100%;">
               <tr>
                 <td>
-                  <div class="dataTable-info">Showing {{1 + numberOfRecords * matPaginator.pageSize}}
-                    to {{totalRecords <= ((1 + numberOfRecords) * matPaginator.pageSize) ? totalRecords : ((1 + numberOfRecords) * matPaginator.pageSize)}}
-                    of {{totalRecords}} authors
+                  <div class="dataTable-info">{{getInfoAboutRecords()}} authors
                   </div>
                 </td>
                 <td>
